--- a/app/src/main/res/layout/activity_main_controls.xml
+++ b/app/src/main/res/layout/activity_main_controls.xml
@@ -29,11 +29,13 @@
         android:background="#438F16">
 
         <Button
+            android:drawableEnd="@drawable/ic_favorite_24dp"
+            android:drawableTint="@color/colorPrimaryDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:text="Boton" />
+            android:text="Boton..." />
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,7 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/fy_contenedor"
-        android:background="#ffffff"
+        android:background="@drawable/baclground_gradient"
         android:orientation="vertical"
         android:gravity="center">
 
@@ -112,8 +114,10 @@
             android:gravity="center"
             android:text="@string/app_name"
             android:textAllCaps="true"
+            android:drawableTop="@drawable/ic_favorite_24dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@android:color/holo_green_light" />
+
         <ProgressBar
             android:layout_gravity="center"
             android:layout_width="match_parent"
@@ -130,7 +134,7 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:src="@mipmap/ic_launcher_round"/>
+            android:src="@drawable/perritoygato"/>
 
     </LinearLayout>
 
