--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.disenofundamentos.proyectoinducciondiseoandroid.MainActivity">
     <item
+        android:id="@+id/action_ic_menu"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_favorite_24dp"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_comaprtir"
+        android:orderInCategory="100"
+        android:title="@string/compartir"
         app:showAsAction="never" />
 </menu>
